--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,14 @@
     crossorigin=""></script>
   
   <!-- Icons -->
-  <script src="js/leaflet.extra-markers.min.js"></script>
+  <script src="../static/js/leaflet.extra-markers.min.js"></script>
 
   <!-- Icons -->
   <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <link rel="stylesheet" href="css/leaflet.extra-markers.min.css">
+  <link rel="stylesheet" href="../static/css/leaflet.extra-markers.min.css">
 
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
 
     <body>
@@ -35,8 +35,8 @@
       <!-- D3 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
 
-    <script type="text/javascript" src="config.js"></script>
-    <script type="text/javascript" src="code.js"></script>
+    <script type="text/javascript" src="../static/js/config.js"></script>
+    <script type="text/javascript" src="../static/js/code.js"></script>
   
 </body>
 </html>
